--- a/style/style.css
+++ b/style/style.css
@@ -50,6 +50,7 @@ nav a {
     padding: 1rem;
     text-decoration: none;
     font-size: 1.5rem;
+    font-weight: bold;
     color: #fbf8f8;
     display: block;
 }
@@ -160,11 +161,15 @@ nav a:hover {
 
 /* Footer */
 
+footer {
+    background-color: #473a35;
+}
+
 .rad-footer {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    margin: 2rem;
+    margin: 2rem 0 0 0;
 }
 
 .kolonne-footer {
@@ -283,7 +288,7 @@ color: #382c20;
 
     /* Footer */
     .rad-footer {
-        visibility: hidden;
+        visibility: none;
     }
     
 }
