--- a/style/aktueltstyle.css
+++ b/style/aktueltstyle.css
@@ -50,6 +50,7 @@ header img {
     transition: 0.5s;
     padding-top: 60px;
     font-family: 'Roboto', sans-serif;
+    font-weight: bold;
 }
 
 .nav a {
