--- a/style/style.css
+++ b/style/style.css
@@ -2,7 +2,6 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    outline: 1px solid red;
 }
 
 body {
@@ -14,7 +13,7 @@ body {
     letter-spacing: 0.02rem;
 }
 
-h2 {
+h1 {
     font-family: 'Bebas Neue', cursive;
     text-transform: uppercase;
     letter-spacing: 0.1rem;
@@ -23,12 +22,15 @@ h2 {
 /* Header */
 
 header {
-    display: flex;
-    justify-content: center;
     background-color: #d1eacd;
 }
 
-header img {
+.bildeseksjon {
+    display: flex;
+    justify-content: center;
+}
+
+.bildeseksjon img {
     width: 20rem;
     padding-top: 3rem;
 }
@@ -53,7 +55,7 @@ nav a {
     text-decoration: none;
     font-size: 1.5rem;
     font-weight: bold;
-    color: #fbf8f8;
+    color: #473a35;
     display: block;
 }
 
@@ -66,14 +68,14 @@ nav a:hover {
     font-size: 3rem;
     cursor: pointer;
     background-color: transparent;
-    color: #869e86;
+    color: #473a35;
     padding: 0.3rem 1rem;
     border: none;
+    margin-bottom: 1rem;
 }
   
 .openbtn:hover {
     background-color: #9ebb9ebf;
-    color: #ffffff;
     transition: 0.3s;
 }
 
@@ -96,7 +98,7 @@ nav a:hover {
 .slideshow {
     position: relative;
     overflow: hidden;
-    margin: 1rem 0;
+    margin-bottom: 0.8rem;
     object-fit: cover;
     max-height: 30rem;
 }
@@ -141,14 +143,14 @@ nav a:hover {
     height: 1rem;
     width: 1rem;
     margin: 0 0.5rem;
-    background-color: #bbb;
+    background-color: #473a35;
     border-radius: 50%;
     display: inline-block;
     transition: background-color 1s ease;
 }
 
 .dot:hover, .active {
-    background-color: #717171;
+    background-color: grey;
 }
 
 /* Fade slideshow bilder */
@@ -181,7 +183,7 @@ footer {
     margin: 1rem 3rem;
 }
 
-.kolonne-footer h2 {
+.kolonne-footer h1 {
     margin-bottom: 0.5rem;
 }
 
@@ -243,11 +245,11 @@ color: #382c20;
     /* Header flyttes */
     header {
         justify-content: flex-start;
-        margin-left: 1rem;
     }
     
     header img {
         width: 10rem;
+        margin-left: 1rem;
         margin-bottom: 1rem;
     }
     
@@ -272,9 +274,12 @@ color: #382c20;
 @media screen and (max-width: 480px) {
     
     /* Mindre header image */
-    header img {
+    .bildeseksjon {
+        justify-content: flex-start;
+    }
+    
+    .bildeseksjon img {
         width: 5rem;
-        margin-bottom: 1rem;
     }
     
     /* Toggle menu */
@@ -292,8 +297,12 @@ color: #382c20;
     }
 
     /* Footer */
-    .rad-footer {
-        visibility: none;
+    .kolonne-footer h1 {
+        font-size: 1.4rem;
+    }
+
+    .kolonne-footer p, .telefonnr {
+        font-size: 0.9rem;
     }
     
 }
