--- a/style/menystyle.css
+++ b/style/menystyle.css
@@ -127,7 +127,7 @@ h2 {
     font-family: 'Bebas Neue', cursive;
     text-transform: uppercase;
     letter-spacing: 0.2rem;
-    color: #259fac;
+    color: #869e86;
     font-size: 2.2rem;
     padding-bottom: 2rem;
 }
@@ -135,8 +135,15 @@ h2 {
 h3 {
     font-family: 'Bebas Neue', cursive;
     text-transform: uppercase;
-    letter-spacing: 0.15rem;
+    letter-spacing: 0.1rem;
     overflow: hidden;
+    font-size: 1.4rem;
+    
+}
+
+span{
+    font-size: 1.4rem;
+    font-family: 'Bebas Neue', cursive;
 }
 
 .tittel {
@@ -235,7 +242,6 @@ h3 {
 
 footer{
     background-color: #473a35;
-    
  }
 
  footer p{
@@ -318,23 +324,16 @@ https://www.w3schools.com/howto/howto_css_social_media_buttons.asp
 
 @media screen and (max-width: 850px) {
 
-/*Mindre skriftstørrelse*/
-    header {
-        justify-content: flex-start;
-        margin-left: 1rem;
-    }
-    
-    header img {
+    .header img {
         width: 10rem;
         margin-bottom: 1rem;
     }
-
+/*Mindre skriftstørrelse*/
     body {
         font-size: 0.9rem;
     }
 
     h2 {
-        letter-spacing: 0.1rem;
         font-size: 1.4rem;
     }
     
@@ -342,6 +341,11 @@ https://www.w3schools.com/howto/howto_css_social_media_buttons.asp
         font-size: 3rem;
         padding: 0rem;
     }
+
+    .kolonne-footer h2 {
+        font-size: 1.4rem;
+    }
+    
 
 /*Flytter kolonnene under hverandre */
     .drikkemeny {
@@ -384,7 +388,6 @@ https://www.w3schools.com/howto/howto_css_social_media_buttons.asp
     }
     .rad-footer {
         flex-direction: column;
-        align-items: center;
     }
     
 }
@@ -398,7 +401,24 @@ https://www.w3schools.com/howto/howto_css_social_media_buttons.asp
 }
 
 @media only screen and (max-width: 480px) {
-
+    /* Header flyttes */
+    header {
+        justify-content: flex-start;
+    }
+    
+    .bildeseksjon img {
+        width: 10rem;
+        margin-left: 1rem;
+        margin-bottom: 1rem;
+    }
+    
+    /* Toggle menu */
+    .openbtn {
+        font-size: 2.5rem;
+        padding: 0.3rem 0.5rem;
+    }
+    
+    
     body {
         font-size: 0.9rem;
     }
